# diploma_project

./: Dockerfile  Makefile  pyproject.toml
.github/workflows/: ci.yml
